# OpenManga

./: .gitignore  README.md  app.py  config.yaml  install.py  pyproject.toml
.opencode/: opencode.json
.opencode/agents/: editor.md  illustrator.md  screenwriter.md  supervisor.md  voice.md
.opencode/skills/openmanga/: SKILL.md
.opencode/skills/openmanga-web/: SKILL.md
OpenManga/pages/: 01_projects.py  02_screenplay.py  03_dashboard.py  04_assets.py
OpenManga/pipeline/: screenwriter.py  supervisor.py  voice.py
OpenManga/tests/: test_config.py  test_editor.py  test_illustrator.py  test_supervisor.py  test_voice.py
OpenManga/tests/web/: test_app.py
agents/: editor.md  illustrator.md  screenwriter.md  supervisor.md  voice.md
docs/superpowers/plans/: 2026-05-02-openmanga-phase1.md  2026-05-03-openmanga-config-flex.md  2026-05-03-openmanga-web-skill.md
docs/superpowers/specs/: 2026-05-02-openmanga-design.md  2026-05-03-openmanga-config-flex.md  2026-05-03-openmanga-web-skill.md
outputs/test_proj/: screenplay.json
outputs/凡尘之舞/: style.txt
pages/: 02_screenplay.py  03_dashboard.py  04_assets.py  05_settings.py
pipeline/: config.py  editor.py  illustrator.py  manifest.py  screenwriter.py  supervisor.py  voice.py
scripts/: install.py
skills/: openmanga-web.md  openmanga.md
tests/: conftest.py  test_config.py  test_editor.py  test_illustrator.py  test_manifest.py  test_screenwriter.py  test_supervisor.py  test_voice.py
tests/fixtures/: sample_screenplay.json  sample_shot_brief.yaml
tests/web/: test_app.py
